--- a/main.yml
+++ b/main.yml
@@ -7,9 +7,10 @@
   - ec2:
     key_name: mykey
     instance_type: t2.micro
-    image: ami-123456
+    image: ami-0de53d8956e8dcf80
     wait: yes
-    group: webserver
-    count: 3
-    vpc_subnet_id: subnet-29e63245
+    group: launch-wizard-7
+    count: 1
+    vpc_subnet_id: subnet-0526b07906bc80138
     assign_public_ip: yes
+    regeion: us-east-1
