--- a/main.yml
+++ b/main.yml
@@ -5,7 +5,7 @@
 
 
   - ec2:
-    key_name: mykey
+    key_name: virginia
     instance_type: t2.micro
     image: ami-0de53d8956e8dcf80
     wait: yes
