--- a/main.yml
+++ b/main.yml
@@ -1,15 +1,16 @@
 ---
  
   - name: create ec2
-    hosts: local
-
-  - name: launch 
-    ec2:
-    key_name: virginia
-    instance_type: t2.micro
-    image: ami-0de53d8956e8dcf80
-    group: launch-wizard-7
-    count: 1
-    vpc_subnet_id: subnet-0526b07906bc80138
-    assign_public_ip: yes
-    regeion: us-east-1
+    hosts: localhost
+    
+    tasks:
+      - name: launch 
+        ec2:
+           key_name: virginia
+           instance_type: t2.micro
+           image: ami-0de53d8956e8dcf80
+           group: launch-wizard-7
+           count: 1
+           vpc_subnet_id: subnet-0526b07906bc80138
+           assign_public_ip: yes
+           region: us-east-1
